// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Loader matches snapshot - default 1`] = `
<svg
  className="loader"
  height="50"
  stroke="#ff8a00"
  viewBox="0 0 38 38"
  width="50"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      strokeWidth="2"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        strokeOpacity=".5"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
      >
        <animateTransform
          attributeName="transform"
          dur="1s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </g>
</svg>
`;

exports[`Component - Loader matches snapshot - option overrides 1`] = `
<svg
  className="loader"
  height="100"
  stroke="red"
  viewBox="0 0 38 38"
  width="100"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      strokeWidth="2"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        strokeOpacity=".5"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
      >
        <animateTransform
          attributeName="transform"
          dur="0.5s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </g>
</svg>
`;
